fixed text overflow

--- a/src/components/note.css
+++ b/src/components/note.css
@@ -45,3 +45,8 @@
 .color{
         transition: background 500ms ease;
 }
+
+.block-with-text {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
