--- a/src/components/noteEditor.css
+++ b/src/components/noteEditor.css
@@ -33,10 +33,8 @@
 }
 
 .NoteEditor__title {
-    display: flex;
     font-size: 14px;
     width: 100%;
-    resize: none;
     margin: 5px;
     border: none;
     font-weight: 500;
